load("@rules_cc//cc:defs.bzl", "cc_library")

cc_library(
    name = "dynamic_bitset",
    visibility = ["//visibility:public"],
    includes = ["include"],
    hdrs = glob(["include/boost/**/*.hpp"]),
    deps = [
        "@boost//libs/core",
        "@boost//libs/integer",
        "@boost//libs/move",
        "@boost//libs/throw_exception",
        "@boost//libs/functional",
        "@boost//libs/container_hash",
    ],
)
